=== master

* Automatically support datasets using qualified tables in the class_table_inheritance plugin without having to use the :alias option (benalavi) (#1565)

* Support rename_column without emulation on SQLite 3.25+ (jeremyevans)

* Do not remove currently cached many_to_one associated objects when changing the related foreign key value from nil to non-nil (jeremyevans)

* Do not validate new *_to_many associated objects twice when saving in the nested_attributes plugin (jeremyevans)

* Add Model#skip_validation_on_next_save! for skipping validation on next save call (jeremyevans)

=== 5.14.0 (2018-11-01)

* Drop defaulting the :port option to 5432 in the postgres adapter, so that setting the :service option in :driver_options works (jeremyevans) (#1558)

* Do not cache values for columns without parseable defaults when using :cache option in defaults_setter plugin (jeremyevans)

* Emulate NULLS FIRST/LAST ordering on databases that do not natively support it (jeremyevans)

* Do not modify boolean expressions created from string or array if string or array is modified (jeremyevans)

* Make roots and roots_dataset dataset methods instead of class methods in the tree plugin (JelF) (#1554)

* Do not cache dataset SQL if dataset uses subquery that cannot cache SQL (jeremyevans)

* Make Model#=== work correctly for models with composite primary keys (jeremyevans)

* Add Model#pk_equal? as a more descriptive name for Model#=== (AlexWayfer) (#1550)

* Do not push down expression inversion in cases where it may result in incorrect behavior (e.g. ANY/SOME/ALL operators) (jeremyevans) (#1549)

=== 5.13.0 (2018-10-01)

* Support :single_value type in prepared statements (rintaun) (#1547)

* Make Model.all in static_cache plugin accept a block (AlexWayfer, jeremyevans) (#1543)

* Add constant_sql_override extension for overriding SQL used for constants such as CURRENT_TIMESTAMP (celsworth) (#1538)

* Do not cache from_self datasets if options are given (jeremyevans)
